changed spelling mistake in login.html line 80

--- a/login.html
+++ b/login.html
@@ -77,7 +77,7 @@
             <label  class= "forblue">Password : </label>   
             <input type="password" placeholder="Enter Password" name="password" id="password" required>  
             <button  onclick ="myFunction()" type="submit"    name="save">SUBMIT YOUR INFO TO OUR DATABASE</button>  
-            <button onclick ="myFunction()" type="submit"  name="this_is_like_id">UBMIT YOUR INFO TO OUR DATABASE</button> 
+            <button onclick ="myFunction()" type="submit"  name="this_is_like_id">SUBMIT YOUR INFO TO OUR DATABASE</button> 
             <input type="checkbox" checked="checked"Remember me >  
               
         </div>   
